# semolina

./: .gitattributes  Cargo.toml  README.md  build.rs
src/: assembly.S  consts.c  lib.rs  pasta.c  pasta_t.hpp  pasta_vdf.c  recip.c  refresh.sh  vect.h
src/asm/: ct_inverse_mod_256-armv8.pl  ct_inverse_mod_256-x86_64.pl  pasta_add-armv8.pl  pasta_add-x86_64.pl  pasta_mul-armv8.pl  pasta_mulq-x86_64.pl  pasta_mulx-x86_64.pl
src/cheri/: ct_inverse_mod_256-armv8.S  pasta_add-armv8.S  pasta_mul-armv8.S
src/coff/: ct_inverse_mod_256-armv8.S  ct_inverse_mod_256-x86_64.s  pasta_add-armv8.S  pasta_add-x86_64.s  pasta_mul-armv8.S  pasta_mulq-x86_64.s  pasta_mulx-x86_64.s
src/elf/: ct_inverse_mod_256-armv8.S  ct_inverse_mod_256-x86_64.s  pasta_add-armv8.S  pasta_add-x86_64.s  pasta_mul-armv8.S  pasta_mulq-x86_64.s  pasta_mulx-x86_64.s
src/mach-o/: ct_inverse_mod_256-armv8.S  ct_inverse_mod_256-x86_64.s  pasta_add-armv8.S  pasta_add-x86_64.s  pasta_mul-armv8.S  pasta_mulq-x86_64.s  pasta_mulx-x86_64.s
src/win64/: ct_inverse_mod_256-armv8.asm  ct_inverse_mod_256-x86_64.asm  pasta_add-armv8.asm  pasta_add-x86_64.asm  pasta_mul-armv8.asm  pasta_mulq-x86_64.asm  pasta_mulx-x86_64.asm
